# sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json  vcpkg.txt
libs/: common.cmake
libs/envVars/: CMakeLists.txt
libs/envVars/include/core/envVars/: envVars.h
libs/envVars/src/: envVars.cpp
libs/module/include/core/module/: module.h
libs/module/src/: module.cpp
libs/pathSolver/: CMakeLists.txt
libs/pathSolver/include/arykow/: PathSolver.h
libs/pathSolver/include/core/pathSolver/: pathSolver.h
libs/pathSolver/src/: PathSolver.cpp
projects/: common.cmake
projects/magnum00/: CMakeLists.txt
projects/magnum00/src/: Application.cpp  Application.h
projects/mandelbrot00/: CMakeLists.txt
projects/mandelbrot00/src/: main.cpp
projects/meta00/: CMakeLists.txt
projects/meta00/src/: main.cpp
projects/sample00/: CMakeLists.txt
projects/sample00/src/: main.cpp
projects/sample01/: CMakeLists.txt
projects/sample01/src/: main.cpp
projects/sample02/: CMakeLists.txt
projects/sample02/src/: main.cpp
projects/sample03/: CMakeLists.txt
projects/sample03/src/: main.cpp
projects/sample03/src/arykow/assets/: Loader.cpp  Loader.h
projects/sample03/src/assets/: Loader.cpp  Loader.h
projects/sample04/: CMakeLists.txt
projects/sample04/src/: main.cpp
projects/sample05/: CMakeLists.txt
projects/sample05/src/: main.cpp
projects/sample06/: CMakeLists.txt
projects/sample06/src/: Level.h  ParticleSystem.cpp  ParticleSystem.h  TileMap.cpp  TileMap.h  main.cpp
projects/sample07/: CMakeLists.txt
projects/sample07/assets/: image_800x600.tga  image_800x600.xcf  layer_800x600_01.tga  layer_800x600_01.xcf  layer_800x600_02.tga  layer_800x600_02.xcf  layer_800x600_03.tga  layer_800x600_03.xcf  palette.tga  palette.xcf
projects/sample07/src/: ImageLoader.cpp  ImageLoader.h  main.cpp
projects/shadertoy00/: CMakeLists.txt
projects/shadertoy00/assets/: fragment_shader.glsl
projects/shadertoy00/src/: main.cpp
projects/shadertoy01/: CMakeLists.txt
projects/shadertoy01/assets/: main.glsl
projects/shadertoy01/src/: main.cpp
